--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10882,3 +10882,20 @@ a.text-dark:focus {
   }
 }
 
+.blink {
+  -webkit-animation: blinker 1s linear infinite;
+          animation: blinker 1s linear infinite;
+}
+
+@-webkit-keyframes blinker {
+  50% {
+    opacity: 0.5;
+  }
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0.5;
+  }
+}
+
