--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,10 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Icons
+.blink {
+    animation: blinker 1s linear infinite;
+  }
+  
+  @keyframes blinker {  
+   50% { opacity: 0.5; }
+  }
