--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,3 +10899,23 @@ a.text-dark:focus {
   }
 }
 
+.scallop-down {
+  height: 100px;
+  width: 100%;
+  background: -webkit-gradient(radial, 50% 0, 10, 50% 0, 40, from(#369A7E), color-stop(0.49, #369A7E), color-stop(0.51, #fff), to(white));
+  -webkit-background-size: 49px 100%;
+}
+
+/*----------------*/
+
+/*  SCALLOP up    */
+
+/*----------------*/
+
+.scallop-up {
+  height: 100px;
+  width: 100%;
+  background: -webkit-gradient(radial, 50% 100%, 10, 50% 100%, 40, from(#369A7E), color-stop(0.49, #369A7E), color-stop(0.51, #fff), to(white));
+  -webkit-background-size: 49px 100%;
+}
+
