--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,24 @@
   @keyframes blinker {  
    50% { opacity: 0.5; }
   }
+
+
+
+  .scallop-down{
+    height:100px;
+    width:100%;
+    background: -webkit-gradient(radial, 50% 0, 10, 50% 0, 40, from(#369A7E), color-stop(0.49, #369A7E), color-stop(0.51, #fff), to(white));
+  -webkit-background-size: 49px 100%;
+  }
+  
+  
+  /*----------------*/
+  /*  SCALLOP up    */
+  /*----------------*/
+  .scallop-up{
+    height:100px;
+    width:100%;
+    background: -webkit-gradient(radial, 50% 100%, 10, 50% 100%, 40, from(#369A7E), color-stop(0.49, #369A7E), color-stop(0.51, #fff), to(white));
+  -webkit-background-size: 49px 100%;
+  }
+  
