--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10919,3 +10919,12 @@ a.text-dark:focus {
   -webkit-background-size: 49px 100%;
 }
 
+.post_img {
+  margin-bottom: 5px;
+  height: 200px;
+  width: auto;
+  border-radius: 15px;
+  border: 1px solid #ddd;
+  padding: 5px;
+}
+
