--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -35,4 +35,14 @@
     background: -webkit-gradient(radial, 50% 100%, 10, 50% 100%, 40, from(#369A7E), color-stop(0.49, #369A7E), color-stop(0.51, #fff), to(white));
   -webkit-background-size: 49px 100%;
   }
-  
+
+
+  .post_img{
+
+    margin-bottom:5px;
+    height:200px;
+    width:auto;
+    border-radius: 15px;
+    border: 1px solid #ddd;
+    padding: 5px;
+  }
