--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -46,3 +46,12 @@
     border: 1px solid #ddd;
     padding: 5px;
   }
+
+  .divider{
+    border-top: 8px solid #bbb;
+    border-bottom:8px solid #bbb;
+    border-right:2px solid #bbb;
+    border-left:2px solid #bbb;
+
+    border-radius: 5px;
+  }
