--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10936,3 +10936,17 @@ a.text-dark:focus {
   border-radius: 5px;
 }
 
+.triangle-left {
+  width: 0;
+  height: 0;
+  border-bottom: 15px solid black;
+  border-right: 15px solid transparent;
+}
+
+.triangle-right {
+  width: 0;
+  height: 0;
+  border-bottom: 15px solid black;
+  border-left: 15px solid transparent;
+}
+
