--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10950,3 +10950,18 @@ a.text-dark:focus {
   border-left: 15px solid transparent;
 }
 
+.chatField {
+  height: 80vh;
+}
+
+.msgField {
+  overflow: auto;
+  background-image: linear-gradient(to bottom, #b4a0a4, #d5c9cd, #E9E9E9, #ffffff);
+  height: 400px;
+}
+
+.msgComposeField {
+  height: 15%;
+  max-height: 15%;
+}
+
