--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -71,3 +71,22 @@
     border-bottom: 15px solid black;
     border-left: 15px solid transparent;
   }
+
+  .chatField
+  {
+    height:80vh;
+
+
+  }
+  .msgField
+  {
+    overflow: auto; 
+    background-image: linear-gradient(to bottom,#b4a0a4,#d5c9cd, #E9E9E9,#ffffff);
+
+    height:400px;
+  }
+  .msgComposeField{
+    height:15%;
+    max-height:15%;
+
+  }
