--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10954,6 +10954,11 @@ a.text-dark:focus {
   height: 80vh;
 }
 
+.wdthh90 {
+  padding-right: 0 !important;
+  max-width: 64% !important;
+}
+
 .msgField {
   overflow: auto;
   background-image: linear-gradient(to bottom, #b4a0a4, #d5c9cd, #E9E9E9, #ffffff);
