--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -78,6 +78,10 @@
 
 
   }
+  .wdthh90{
+    padding-right:0 !important;
+    max-width: 64% !important;
+  }
   .msgField
   {
     overflow: auto; 
