--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10950,10 +10950,6 @@ a.text-dark:focus {
   border-left: 15px solid transparent;
 }
 
-.chatField {
-  height: 80vh;
-}
-
 .blClr {
   background: #00c6ff;
   /* fallback for old browsers */
@@ -10966,21 +10962,27 @@ a.text-dark:focus {
   height: 100vh !important;
 }
 
-.wdthh90 {
-  padding-right: 0 !important;
-  max-width: 64% !important;
+.chatField {
+  height: 85vh !important;
+}
+
+.fixChatRight {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 3.7em !important;
+  right: 0;
 }
 
 .msgField {
   overflow: auto;
   background-image: linear-gradient(to bottom, #b4a0a4, #d5c9cd, #E9E9E9, #ffffff);
-  height: 60vh !important;
-  max-height: 60vh !important;
+  height: 75vh;
+  max-height: 75vh;
 }
 
-.msgComposeField {
-  height: 15vh !important;
-  max-height: 15vh !important;
+.wdthh90 {
+  padding-right: 0 !important;
+  max-width: 64% !important;
 }
 
 .bg-mango {
@@ -10989,5 +10991,24 @@ a.text-dark:focus {
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #ffa751, #ffe259);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.bg-grayGradient {
+  background-image: linear-gradient(to left, #b4a0a4, #d5c9cd, #E9E9E9, #ffffff);
+}
+
+.stickyNavbar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 200;
+}
+
+.timestamp {
+  font-size: 0.5rem;
+}
+
+.pt-23 {
+  padding-top: 2.3em !important;
 }
 
