--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,6 +10899,10 @@ a.text-dark:focus {
   }
 }
 
+html {
+  height: 98vh !important;
+}
+
 .scallop-down {
   height: 100px;
   width: 100%;
@@ -10959,11 +10963,11 @@ a.text-dark:focus {
 }
 
 .vh100body {
-  height: 100vh !important;
+  height: 90vh !important;
 }
 
 .chatField {
-  height: 85vh !important;
+  height: 80vh !important;
 }
 
 .fixChatRight {
@@ -10973,11 +10977,29 @@ a.text-dark:focus {
   right: 0;
 }
 
+#closeIcon {
+  color: #ca3433;
+  text-shadow: 1px 1px 1px #ccc;
+  font-size: 2.5em;
+}
+
+.bg-pretyRed {
+  background-color: #ca3433;
+}
+
+.ltr-spacing {
+  letter-spacing: 0.1em;
+}
+
 .msgField {
   overflow: auto;
   background-image: linear-gradient(to bottom, #b4a0a4, #d5c9cd, #E9E9E9, #ffffff);
   height: 75vh;
   max-height: 75vh;
+}
+
+.mt-05 {
+  margin-top: -0.5rem;
 }
 
 .wdthh90 {
