--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,9 @@
   @keyframes blinker {  
    50% { opacity: 0.5; }
   }
-
+html{
+  height: 98vh !important;
+}
   .scallop-down{
     height:100px;
     width:100%;
@@ -78,11 +80,11 @@ background: linear-gradient(to top, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Fir
 
   }
   .vh100body{
-    height: 100vh !important;
+    height: 90vh !important;
   }
   .chatField
   {
-    height: 85vh !important;
+    height: 80vh !important;
   }
 
   // .availableUsersField{
@@ -95,12 +97,31 @@ background: linear-gradient(to top, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Fir
   top: 3.7em !important;
   right: 0;
 }
+
+#closeIcon{
+  
+    color:rgb(202, 52, 51);
+    text-shadow: 1px 1px 1px #ccc;
+    font-size: 2.5em;
+}
+
+.bg-pretyRed{
+  background-color:rgb(202, 52, 51);
+
+
+}
+.ltr-spacing{
+  letter-spacing: 0.1em;
+}
   .msgField
   {
     overflow: auto; 
     background-image: linear-gradient(to bottom,#b4a0a4,#d5c9cd, #E9E9E9,#ffffff);
     height:75vh;
     max-height:75vh;
+  }
+  .mt-05{
+    margin-top: -0.5rem;
   }
   .msgComposeField{
     // height:15vh !important;
