--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -148,6 +148,11 @@ background: linear-gradient(to bottom, #f47a60, #8d1c4f); /* W3C, IE 10+/ Edge, 
     background:#1e2761;
   }
 
+  .previewImageInput{
+    height:8em;
+    max-height:8em;
+  }
+
   .bg-redPretty{
     background:#8d1c4f;
   }
