--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -161,6 +161,9 @@ background: linear-gradient(to bottom, #f47a60, #8d1c4f); /* W3C, IE 10+/ Edge, 
 
 }
 
+.cntrAlgn{
+text-align: center
+}
 .stickyNavbar{
   position: sticky;
   top: 0;
